# probo

./: .gitignore  AGENTS.md  Package.swift  README.md
.github/workflows/: cd.yml  ci.yml
Sources/HotPathProfile/: HotPathProfile.swift
Sources/Probo/: ProboApp.swift
Tests/ProboTests/: AppConfigurationStoreTests.swift  AutomaticSleepPreventionControllerTests.swift  EventTapOptionsTests.swift  ProboRuntimeTests.swift  ProboSettingsViewControllerTests.swift  RuntimeTests.swift  ScrollDecisionTests.swift  ScrollEventRewriterTests.swift  ScrollEventSynthesizerTests.swift  ScrollRewriteCoreTests.swift  ScrollRewriterTests.swift  SettingsStoreTests.swift
docs/: algorithm.md  high-level-plan.md
macos/Sources/: AppConfiguration.swift  AppConfigurationStore.swift  AppDelegate.swift  EventTapController.swift  LaunchAtLogin.swift  RuntimeBridge.swift  ScrollEventSynthesizer.swift  StatusMenuController.swift
macos/Tests/: AppConfigurationStoreTests.swift  ScrollEventSynthesizerTests.swift  ScrollRewriteCoreTests.swift  TestHarness.swift
probo/Resources/: AppIcon.icns  Info.plist
probo/Tests/: AppConfigurationStoreTests.swift  AutomaticSleepPreventionControllerTests.swift  ProboRuntimeTests.swift  ProboSettingsViewControllerTests.swift  ScrollEventSynthesizerTests.swift  ScrollRewriteCoreTests.swift  TestHarness.swift
runtime/: Cargo.toml
runtime/include/: probo_runtime.h
runtime/src/: lib.rs  sim.rs
scr/: bench.sh  build.sh  compare.sh  run.sh
scr/runtime/: Cargo.toml
scripts/: bench.sh  build.sh  compare.sh  lsp.sh  run.sh  setup-local-codesign.sh  test.sh
(+70 files in other folders)
