[package]
name = "probo_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
sim = []

[[bin]]
name = "probo_compare"
path = "src/bin/probo_compare.rs"
required-features = ["sim"]

[[bin]]
name = "probo_bench"
path = "src/bin/probo_bench.rs"
required-features = ["sim"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
